# housing-Leo-Huang

./: Dokerfile  Read_Me.txt  app.py  config.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  test_connection.py
housing-model/: Dokerfile  analysis.py  app.py  train.py  train_model.py
